changed jpa id generation strategy to auto. commented out spring social deps in pom.xml to suppress the servlet-api-2.5 - jar not loaded issue.